# cython-blas

./: .appveyor.yml  .gitignore  .gitmodules  meson.build  pyproject.toml  test_dgemm.py  test_zgemm.py  test_zgemm_conjugate.py  test_zgemm_no_conjugate.py
.github/workflows/: blis.yml  blis_manylinux.yml  unit-tests.yml  wheels.yml
.spin/: cmds.py
cython_blas/: __init__.py  _blis.pxd  _cblas.pxd  blis.pyx  level3.pyx  matmul.pyx  meson.build  openblas.pyx  openblas_matmul.pyx  optimize.py  utility.pyx
cython_blas/tests/: meson.build  test_blis.py  test_level3.py  test_matmul.py  test_openblas.py  test_optimize.py  utils.py
docs/source/: conf.py  index.rst
lib/blis/linux-x86_64/include/blis/: blis.h
lib/blis/win-x86_64/include/blis/: blis.h
tools/: before_build.py  before_build_win.py  build_blis_manylinux.sh
