[project]
name = "cython-blas"
version = "0.1.0"

requires-python = ">=3.11"
dependencies = ["numpy >=2.0"]

[project.optional-dependencies]
dev = [
    # Unit tests
    "pytest",
    # Linting
    "deptry",
    "ruff",
    "isort",
    "cython-lint",
    # Build environment
    "scipy-openblas64 >=0.3.29",
    "cython >=3.0.5",
    "meson-python >=0.17.0",
    "meson >=1.7.0",
    "ninja >=1.11",
    "build",
    "delvewheel >=1.10.1",
    "spin",
    "click",
]


[tool.cibuildwheel]
build-frontend = "build"
archs = ["auto64"]
skip = [
    "pp*",   # PyPy
    "musl*", # musllinux
]

[tool.cibuildwheel.linux]
environment = { "PKG_CONFIG_PATH" = "$(mktemp -d)" }
before-build = [
    "python -c 'import scipy_openblas32; print(scipy_openblas32.get_pkg_config())' > $PKG_CONFIG_PATH/scipy-openblas.pc",
]


[tool.cibuildwheel.windows]
before-all = ["pip install delvewheel"]
repair-wheel-command = ["delvewheel repair -w {dest_dir} {wheel}"]

[tool.cython-lint]
max-line-length = 120


[tool.isort]
atomic = true
skip_glob = ["*.py"] # isort is only used for Cython files
line_length = 120
py_version = 311


[tool.meson-python.args]
setup = ["--vsenv"]


[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "examples/*", # Patterns are glob expressions
]
lint.select = ["ALL"]
lint.ignore = [
    "FBT",     # Boolean traps
    "PLR2004", # constant value
    "T201",    # Allow print
    "TD002",   # No author on TODO
    "TD003",   # No ticket on TODO
    "FIX",     # All fixme types (aka, you can have TODOs and FIXMEs in your code.
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
]

lint.unfixable = [
    "B007",    # Don't modify unused loop control variable
    "F401",    # Don't delete unused imports
    "F841",    # Don't delete unused variables
    "ERA001",  # Don't delete commented out code
    "PERF102", # Don't auto-convert .items() to .values()
]

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = [
    "ANN201", # Allow no return types in tests
    "S101",   # Allow asserts in tests
]
"**/tests/**/__init__.py" = [
    "D104", # Don't require docstrings in test packages.
]

[tool.ruff.lint.pydocstyle]
convention = "google" # Accepts: "google", "numpy" or "pep257".


[tool.spin]
package = "cyhon_blas"

[tool.spin.commands]
"Build" = [".spin/cmds.py:build"]
"Dev" = [
    ".spin/cmds.py:in_place",
    ".spin/cmds.py:setup_in_place",
    ".spin/cmds.py:cython_lint",
    ".spin/cmds.py:cython_stringfix",
]


[build-system]
requires = [
    "meson-python >=0.17.0",
    "ninja >=1.11",
    "cython >=3.0.5",
    "numpy >=2.0",               # need to call numpy.get_include() during build
    "scipy-openblas64 >=0.3.29",
]
build-backend = "mesonpy"
